[package]
name = "swarm_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
kanal = "0.1.0-pre8"
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }
json = { version = "0.12.4" }
